--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 *.class
 *Test.java
 **/test/
+# Ignore specific configuration files
+/sky-server/src/main/resources/application-dev.yml
+/sky-server/src/main/resources/application.yml
